Remove broken video element, improve photo grid height

--- a/index.html
+++ b/index.html
@@ -1030,14 +1030,15 @@
     .bright-minds-photos {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      gap: 16px;
+      gap: 12px;
       margin-bottom: 40px;
     }
 
     .bright-minds-photos img {
       width: 100%;
-      height: 220px;
+      height: 280px;
       object-fit: cover;
+      object-position: center;
       border-radius: var(--radius-md);
       display: block;
     }
@@ -1632,14 +1633,7 @@
           <p>Solar panels and WiFi for the <a href="https://dongriinfoundation.org/" target="_blank" rel="noopener">Dongriin Foundation</a> learning center — removing barriers to digital inclusion in a refugee community.</p>
         </div>
 
-        <div class="video-wrapper fade-in fade-in-delay-1">
-          <video controls preload="metadata" aria-label="Bright Minds, No Lights campaign video">
-            <source src="BRIGHT MINDS, NO LIGHTS CAMPAIGN.mp4" type="video/mp4" />
-            Your browser does not support the video tag.
-          </video>
-        </div>
-
-        <div class="bright-minds-photos fade-in fade-in-delay-2">
+        <div class="bright-minds-photos fade-in fade-in-delay-1">
           <img src="Solar installation -01.jpg" alt="Solar panel installation at Dongriin Foundation" />
           <img src="Installation -Photo 002.jpg" alt="Installation in progress at the learning center" />
           <img src="Wiring and installation - office.jpg" alt="Wiring and electrical installation in the office" />
