--- a/index.html
+++ b/index.html
@@ -1007,24 +1007,16 @@
       box-shadow: var(--shadow-lg);
       margin: 0 auto 40px;
       background: #000;
-      max-width: 50%;
+      max-width: 340px;
+      aspect-ratio: 9 / 16;
     }
 
-    .video-wrapper {
-      border-radius: var(--radius-lg);
-      overflow: hidden;
-      box-shadow: var(--shadow-lg);
-      margin-bottom: 40px;
-      background: #000;
-      max-width: 500px;  /* Add this to constrain the wrapper */
-      margin-left: auto;
-      margin-right: auto;
+    .video-wrapper iframe {
+      width: 100%;
+      height: 100%;
+      display: block;
+      border: none;
     }
-    
-  .video-wrapper video {
-    width: 100%;  /* Change this to 100% so it fills the wrapper */
-    display: block;
-  }
 
     /* Bright Minds photo grid */
     .bright-minds-photos {
@@ -1338,7 +1330,7 @@
       }
 
       .video-wrapper {
-        max-width: 100%;
+        max-width: 280px;
       }
 
       .bright-minds-photos {
@@ -1633,7 +1625,17 @@
           <p>Solar panels and WiFi for the <a href="https://dongriinfoundation.org/" target="_blank" rel="noopener">Dongriin Foundation</a> learning center — removing barriers to digital inclusion in a refugee community.</p>
         </div>
 
-        <div class="bright-minds-photos fade-in fade-in-delay-1">
+        <div class="video-wrapper fade-in fade-in-delay-1">
+          <iframe
+            src="https://www.youtube.com/embed/cJNtXnjokWU"
+            title="Bright Minds, No Lights campaign video"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+
+        <div class="bright-minds-photos fade-in fade-in-delay-2">
           <img src="Solar installation -01.jpg" alt="Solar panel installation at Dongriin Foundation" />
           <img src="Installation -Photo 002.jpg" alt="Installation in progress at the learning center" />
           <img src="Wiring and installation - office.jpg" alt="Wiring and electrical installation in the office" />
